[project]
authors         = [{ name = "ms-jpq", email = "github@bigly.dog" }]
description     = "live web preview of markdown docs"
name            = "markdown-live-preview"
readme          = "README.md"
requires-python = ">=3.8.0"
version         = "0.2.29"

dependencies = [
  "watchdog==2.1.9",
  "Markdown==3.4.1",
  "Pygments==2.13.0",
  "aiohttp==3.8.3",
]
[project.optional-dependencies]
dev  = ["mypy", "types-Markdown"]
dist = ["wheel"]

[project.urls]
homepage = "https://github.com/ms-jpq/markdown-live-preview"


[project.scripts]
"mlp" = "markdown_live_preview.__main__:main"
