[project]
authors         = [{ name = "ms-jpq", email = "github@bigly.dog" }]
description     = "live web preview of markdown docs"
name            = "markdown-live-preview"
readme          = "README.md"
requires-python = ">=3.8.0"
version         = "0.2.44"

dependencies = [
  "Markdown==3.4.3",
  "Pygments==2.15.1",
  "aiohttp==3.8.4",
  "watchdog==3.0.0",
]
[project.optional-dependencies]
dev  = ["mypy", "types-Markdown", "black", "isort"]
dist = ["wheel"]

[project.urls]
homepage = "https://github.com/ms-jpq/markdown-live-preview"

[project.scripts]
"mlp" = "markdown_live_preview.__main__:main"
