[project]
authors         = [{ name = "ms-jpq", email = "github@bigly.dog" }]
description     = "live web preview of markdown docs"
name            = "markdown-live-preview"
readme          = "README.md"
requires-python = ">=3.8.0"
version         = "0.2.57"

dependencies = [
  "Markdown==3.5.2",
  "Pygments==2.17.2",
  "aiohttp==3.9.1",
  "pymdown-extensions==10.7",
  "watchdog==3.0.0",
]
[project.optional-dependencies]
dev  = ["mypy", "types-Markdown", "black", "isort"]
dist = ["setuptools", "wheel"]

[project.urls]
homepage = "https://github.com/ms-jpq/markdown-live-preview"

[project.scripts]
"mlp" = "markdown_live_preview.__main__:main"
